--- a/source/GithubX.UWP/Views/ActivitiesPage.xaml
+++ b/source/GithubX.UWP/Views/ActivitiesPage.xaml
@@ -6,6 +6,7 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="using:GithubX.UWP.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:octo="using:Octokit"
 	Loaded="Page_Loaded"
 	mc:Ignorable="d">
 	<GridView
@@ -13,7 +14,7 @@
 		ItemsSource="{x:Bind activityRepositories}"
 		Style="{StaticResource MainGridView}">
 		<GridView.ItemTemplate>
-			<DataTemplate>
+			<DataTemplate x:DataType="octo:Activity">
 				<ctrl:ActivityItem Repository="{Binding}" />
 			</DataTemplate>
 		</GridView.ItemTemplate>
