--- a/source/GithubX.UWP/Views/GistPage.xaml
+++ b/source/GithubX.UWP/Views/GistPage.xaml
@@ -5,7 +5,22 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="using:GithubX.UWP.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
 	mc:Ignorable="d">
-
-	<Grid />
+	<toolkit:Expander
+		x:Name="Expander2"
+		Margin="0"
+		VerticalAlignment="Top"
+		HorizontalContentAlignment="Stretch"
+		ExpandDirection="Down"
+		Header="This is the header - expander 2"
+		IsExpanded="False">
+		<Grid Height="256" Background="Red">
+			<TextBlock
+				HorizontalAlignment="Center"
+				VerticalAlignment="Center"
+				Text="This is the expanded content without a content overlay"
+				TextWrapping="Wrap" />
+		</Grid>
+	</toolkit:Expander>
 </Page>
