--- a/source/GithubX.UWP/App.xaml
+++ b/source/GithubX.UWP/App.xaml
@@ -14,7 +14,7 @@
 				<ResourceDictionary Source="Theme\ColorPalette.xaml" />
 				<!--<ResourceDictionary Source="CompactSize.xaml"/>-->
 			</ResourceDictionary.MergedDictionaries>
-			<x:Int32 x:Key="DefaultWidth">240</x:Int32>
+			<x:Double x:Key="DefaultWidth">260</x:Double>
 			<x:Int32 x:Key="DefaultCorner">6</x:Int32>
 			<Color x:Key="AcrylicBrushTintColor1">#eee</Color>
 			<Color x:Key="AcrylicBrushFallbackColor1">#eee</Color>
@@ -43,6 +43,7 @@
 				<Setter Property="IsItemClickEnabled" Value="True" />
 				<Setter Property="IsSwipeEnabled" Value="True" />
 				<Setter Property="SelectionMode" Value="None" />
+				<Setter Property="ScrollViewer.VerticalScrollMode" Value="Disabled" />
 				<Setter Property="ScrollViewer.HorizontalScrollMode" Value="Auto" />
 				<Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Auto" />
 				<Setter Property="HeaderTemplate">
@@ -68,7 +69,7 @@
 			<Style x:Key="CardGrid" TargetType="Grid">
 				<Setter Property="Background" Value="{ThemeResource CardColor}" />
 				<Setter Property="HorizontalAlignment" Value="Stretch" />
-				<Setter Property="CornerRadius" Value="6" />
+				<Setter Property="CornerRadius" Value="4" />
 				<Setter Property="Width" Value="{ThemeResource DefaultWidth}" />
 			</Style>
 			<Style x:Key="CardStack" TargetType="StackPanel">
@@ -76,7 +77,7 @@
 				<Setter Property="Margin" Value="0,4,4,4" />
 				<Setter Property="Padding" Value="8,4" />
 				<Setter Property="HorizontalAlignment" Value="Stretch" />
-				<Setter Property="CornerRadius" Value="6" />
+				<Setter Property="CornerRadius" Value="4" />
 				<Setter Property="Width" Value="{ThemeResource DefaultWidth}" />
 			</Style>
 			<Style x:Key="ShadowCard" TargetType="toolkit:DropShadowPanel">
