--- a/source/GithubX.UWP/Views/Controls/RepositoryItem.xaml
+++ b/source/GithubX.UWP/Views/Controls/RepositoryItem.xaml
@@ -21,7 +21,7 @@
 			<!--  x:Phase="3"  -->
 			<toolkit:ImageEx
 				CornerRadius="6"
-				Source="{x:Bind Repo.Owner.AvatarUrl}"
+				Source="{Binding Owner.AvatarUrl}"
 				Style="{StaticResource ImageCard}" />
 			<TextBlock
 				Grid.Column="1"
@@ -29,17 +29,17 @@
 				VerticalAlignment="Center"
 				MaxLines="3"
 				TextWrapping="Wrap">
-				<Run Text="{x:Bind Repo.FullName}" /><LineBreak />
+				<Run Text="{Binding FullName}" /><LineBreak />
 				<Run
 					FontSize="11"
 					FontWeight="SemiLight"
-					Text="{x:Bind Repo.Description}" />
+					Text="{Binding Description}" />
 			</TextBlock>
 			<Border Grid.RowSpan="2" Grid.Column="2">
 				<Border
 					Width="125"
 					HorizontalAlignment="Center"
-					Background="{x:Bind Repo.Language, Converter={StaticResource LanguageToColorConverter}}">
+					Background="{Binding Language, Converter={StaticResource LanguageToColorConverter}}">
 					<TextBlock
 						Height="20"
 						HorizontalAlignment="Center"
@@ -47,7 +47,7 @@
 						FontWeight="SemiBold"
 						Foreground="White"
 						RenderTransformOrigin="0.5,0.4"
-						Text="{x:Bind Repo.Language}">
+						Text="{Binding Language}">
 						<TextBlock.RenderTransform>
 							<RotateTransform Angle="90" />
 						</TextBlock.RenderTransform>
