--- a/source/GithubX.UWP/Views/Dialogs/AddCategoryDialog.xaml
+++ b/source/GithubX.UWP/Views/Dialogs/AddCategoryDialog.xaml
@@ -2,19 +2,22 @@
 	x:Class="GithubX.UWP.Views.AddCategoryDialog"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:ctrl="using:GithubX.UWP.Views.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="using:GithubX.UWP.Views"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:mdl="using:GithubX.Shared.Models"
-	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	Background="{ThemeResource RegionBrush}"
 	Loaded="ContentDialog_Loaded"
 	PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
 	PrimaryButtonText="Save"
-	RequestedTheme="Light"
 	SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
 	SecondaryButtonText="Cancel"
 	mc:Ignorable="d">
+	<ContentDialog.PrimaryButtonStyle>
+		<Style TargetType="Button">
+			<Setter Property="Background" Value="{ThemeResource SystemControlBackgroundAccentBrush}" />
+		</Style>
+	</ContentDialog.PrimaryButtonStyle>
 	<Grid MinHeight="160">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="88" />
@@ -35,7 +38,7 @@
 			Grid.Row="0"
 			Grid.Column="1"
 			Margin="12,0,0,0"
-			Text="{Binding category.Title, Mode=TwoWay}" />
+			Text="{x:Bind category.Title, Mode=TwoWay}" />
 		<Border
 			Grid.Row="1"
 			Grid.Column="0"
@@ -47,8 +50,8 @@
 			CornerRadius="6">
 			<Border.Background>
 				<LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-					<GradientStop Color="{x:Bind category.Background.Color1, Mode=OneWay}" />
-					<GradientStop Offset="1" Color="{x:Bind category.Background.Color2, Mode=OneWay}" />
+					<GradientStop Color="{x:Bind category.Background.Color1, Mode=TwoWay}" />
+					<GradientStop Offset="1" Color="{x:Bind category.Background.Color2, Mode=TwoWay}" />
 				</LinearGradientBrush>
 			</Border.Background>
 
@@ -59,7 +62,7 @@
 				FontFamily="/Assets/Files/devicon.ttf#devicon"
 				FontSize="36"
 				RequestedTheme="Dark"
-				Text="💛" />
+				Text="{x:Bind category.Icon, Mode=TwoWay}" />
 		</Border>
 		<Pivot Grid.Row="1" Grid.Column="2">
 			<Pivot.HeaderTemplate>
@@ -76,22 +79,27 @@
 					Height="160"
 					IsItemClickEnabled="True"
 					ItemClick="Color_ItemClick"
-					ItemsSource="{x:Bind colorsList}"
+					ItemsSource="{x:Bind ColorsList}"
 					ScrollViewer.HorizontalScrollBarVisibility="Visible"
 					ScrollViewer.HorizontalScrollMode="Enabled"
+					ScrollViewer.VerticalScrollMode="Disabled"
 					SelectionMode="Single">
 					<GridView.ItemsPanel>
 						<ItemsPanelTemplate>
 							<ItemsWrapGrid Orientation="Vertical" />
 						</ItemsPanelTemplate>
 					</GridView.ItemsPanel>
+					<GridView.Resources>
+						<Style x:Key="colorBorder" TargetType="Border">
+							<Setter Property="Width" Value="30" />
+							<Setter Property="Height" Value="30" />
+							<Setter Property="Padding" Value="8" />
+							<Setter Property="CornerRadius" Value="20" />
+						</Style>
+					</GridView.Resources>
 					<GridView.ItemTemplate>
 						<DataTemplate x:DataType="mdl:GradientColor">
-							<Border
-								Width="30"
-								Height="30"
-								Padding="8"
-								CornerRadius="20">
+							<Border Style="{StaticResource colorBorder}">
 								<Border.Background>
 									<LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
 										<GradientStop Color="{x:Bind Color1}" />
@@ -104,7 +112,7 @@
 				</GridView>
 			</PivotItem>
 			<PivotItem Header="Icon">
-				<Grid MaxHeight="300" Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
+				<Grid Height="300" Background="{ThemeResource SystemControlBackgroundChromeMediumBrush}">
 					<Grid.Resources>
 						<Style TargetType="Button">
 							<Setter Property="Background" Value="Transparent" />
@@ -114,6 +122,12 @@
 							<Setter Property="HorizontalAlignment" Value="Stretch" />
 							<Setter Property="VerticalAlignment" Value="Stretch" />
 							<Setter Property="IsTabStop" Value="False" />
+						</Style>
+						<Style x:Key="EmojiTextBlock" TargetType="TextBlock">
+							<Setter Property="VerticalAlignment" Value="Center" />
+							<Setter Property="HorizontalAlignment" Value="Stretch" />
+							<Setter Property="FontFamily" Value="/Assets/Files/devicon.ttf#devicon" />
+							<Setter Property="TextAlignment" Value="Center" />
 						</Style>
 					</Grid.Resources>
 					<Grid.RowDefinitions>
@@ -128,7 +142,7 @@
 						IsItemClickEnabled="True"
 						IsTabStop="False"
 						ItemClick="EmojiPresenter_ItemClick"
-						ItemsSource="{x:Bind emojiKeboardList, Mode=OneWay}"
+						ItemsSource="{x:Bind emojiKeyboardList, Mode=OneWay}"
 						TabIndex="0">
 						<GridView.ItemContainerStyle>
 							<Style TargetType="GridViewItem">
@@ -140,16 +154,10 @@
 						</GridView.ItemContainerStyle>
 						<GridView.ItemTemplate>
 							<DataTemplate x:DataType="x:String">
-								<TextBlock
-									HorizontalAlignment="Stretch"
-									VerticalAlignment="Center"
-									FontFamily="/Assets/Files/devicon.ttf#devicon"
-									Text="{x:Bind}"
-									TextAlignment="Center" />
+								<TextBlock Style="{StaticResource EmojiTextBlock}" Text="{x:Bind}" />
 							</DataTemplate>
 						</GridView.ItemTemplate>
 					</GridView>
-
 					<Grid
 						x:Name="CategoriesPanel"
 						Grid.Row="1"
@@ -207,12 +215,14 @@
 				</Grid>
 			</PivotItem>
 		</Pivot>
-
 		<Button
+			x:Name="RemoveBtn"
 			Grid.Row="2"
 			Grid.ColumnSpan="2"
 			HorizontalAlignment="Stretch"
+			x:Load="False"
 			Background="{ThemeResource RedPigment}"
+			Click="RemoveBtn_Click"
 			RequestedTheme="Dark">
 			<StackPanel Orientation="Horizontal">
 				<SymbolIcon Margin="16,0" Symbol="Delete" />
