--- a/source/GithubX.UWP/Views/CategoriesPage.xaml
+++ b/source/GithubX.UWP/Views/CategoriesPage.xaml
@@ -40,7 +40,7 @@
 							</Grid.ColumnDefinitions>
 							<TextBlock
 								Grid.Column="0"
-								Margin="4,8"
+								Margin="18"
 								VerticalAlignment="Center"
 								FontFamily="/Assets/Files/devicon.ttf#devicon"
 								FontSize="36"
@@ -49,6 +49,7 @@
 								Grid.Column="1"
 								VerticalAlignment="Center"
 								FontFamily="Candara"
+								Margin="0 0 0 4"
 								FontSize="22"
 								FontWeight="SemiBold"
 								MaxLines="1"
